updated ELA page with download link

--- a/ELA/index.html
+++ b/ELA/index.html
@@ -116,7 +116,7 @@
         <span class="desktop1-text19">
           Upload a Question &amp; Essay (TXT, PDF, or DOCX)
         </span>
-
+    
         <!-- Additional dropdowns -->
         <div class="desktop1-generatequestion">
           <span class="desktop1-text21 BodyBase">Generate question</span>
@@ -126,6 +126,12 @@
             <option value="No">No - I will enter or upload a question</option>
           </select>
         </div>
+        <!-- download link for template -->
+        <div class="desktop1-downloadlink">
+          <a href="https://github.com/haydenkerr/INFT3039-Capstone1-GroupA-25/raw/refs/heads/main/ELA/template.docx" download="ELA-Template.docx">
+            <span class="desktop1-text20">Download Template</span>
+          </a>
+          </div>
         <div class="desktop1-tasktype">
           <span class="desktop1-text22 BodyBase">Task Type</span>
           <select>
