Updated db, UI, overall score calculation and docs for database connection

--- a/ELA_UI/index.html
+++ b/ELA_UI/index.html
@@ -51,7 +51,7 @@
           <label for="task-type">Task Type</label>
           <select id="task-type">
             <option hidden>Select an option</option>
-            <option value="Academic Task 1">Academic Task 1</option>
+            <!-- <option value="Academic Task 1">Academic Task 1</option> -->
             <option value="Academic Task 2">Academic Task 2</option>
             <option value="General Task 1">General Task 1</option>
             <option value="General Task 2">General Task 2</option>
