UI2SP-471  submissions page updates

--- a/ELA_UI/index.html
+++ b/ELA_UI/index.html
@@ -32,7 +32,9 @@
         <label for="email">Enter email</label>
         <input type="email" id="email" placeholder="firstName.lastName@email.com" />
       </div>
-  
+      <div class="form-group">
+        <button id="view-submissions-btn" type="button">View My Previous Submissions</button>
+      </div>
       <!-- Submission Group + Task Type (show on same row) -->
       <div class="form-row">
         <div class="form-group">
