--- a/ela_rag_docker/result_template.html
+++ b/ela_rag_docker/result_template.html
@@ -49,6 +49,10 @@
 </head>
 <body>
     <div class="container">
+
+            <div style="margin-bottom: 20px;">
+    <a href="/index.html" style="font-weight:bold;">&#8592; Back to Main Page</a>
+</div>
         <h1>View Results</h1>
 
         <h2>Question:</h2>
@@ -108,5 +112,6 @@
             </table>
         </div>
     </div>
+
 </body>
 </html>
