Refactor code structure for improved readability and maintainability

--- a/ELA_UI/index.html
+++ b/ELA_UI/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="form-group">
         <button id="view-submissions-btn" type="button">View My Previous Submissions</button>
-      </div>
+      </div>  
       <!-- Submission Group + Task Type (show on same row) -->
       <div class="form-row">
         <div class="form-group">
@@ -88,6 +88,14 @@
             <img src="public/external/uploadi153-jmr8.svg" alt="Upload" />
             Choose File
           </button>
+        </div>
+        <!-- PDF formatting guidance -->
+        <div id="pdf-format-warning" style="display: none; margin-top: 1rem; color: #b91c1c; background-color: #fef2f2; padding: 1rem; border: 1px solid #fca5a5; border-radius: 6px;">
+          <strong>PDF formatting tip:</strong>
+          <ul style="margin-top: 0.5rem; padding-left: 1.5rem;">
+            <li>We recomend uploading pdf files rather than copying and pasting from them</li>
+            <li>If you choose to copy and paste from a pdf you may like to check the formatting below</li>
+          </ul>
         </div>
       </div>
 
