--- a/ELA_UI/index.html
+++ b/ELA_UI/index.html
@@ -191,8 +191,8 @@
     <!-- <div id="feedback" style="margin-bottom: 2rem;"></div> -->
 
     <!-- Main script -->
-    <script src="config.js"></script> 
-    <script src="script.js"></script>
+    <script src="config.js" defer></script> 
+    <script src="script.js" defer></script>
 
 </body>
 
